# GrammarLee

./: main.py  pyproject.toml  run_gepa.py
src/grammarlee/: __init__.py  editor.py  html.py  judge.py  models.py  optimize.py  parser.py  signature.py
src/grammarlee-train/: pyproject.toml  test_rewards.py
src/grammarlee-train/grammarlee_train/rewards/: aggregate.py  components.py  reward_fn.py  weights.py
src/grammarlee/grammar/: backmatter.lalr
src/grammarlee/templates/: default.jinja  minimal.jinja
tests/: test_backmatter.py  test_dspy_reward.py  test_editor.py  test_html.py  test_inline_anchors.py  test_model.py  test_parser.py  test_property_based.py
