[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grammarlee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
grammarlee = ["grammar/*.lalr"]

[tool.uv.workspace]
members = [".", "src/grammarlee-train"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
train = [
    "datasets>=4.0.0",
]

[project.scripts]
gl-parse = "grammarlee.parser:main"
